# unitflex-Iliyas

./: README.md
unitflexx/: Dockerfile  cli.py  pyproject.toml
unitflexx/tests/: test_core.py  test_currency.py  test_distance.py  test_temperature.py
unitflexx/unitflex.egg-info/: SOURCES.txt  entry_points.txt  tmp_vfw3en5  top_level.txt
unitflexx/unitflexx/: core.py  currency.py  distance.py  temperature.py
unitflexx/unitflexx.egg-info/: PKG-INFO  SOURCES.txt
